<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RateIt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>

    <string name="signin_layout_lt_lb">Вход</string>
    <string name="signin_layout_login_lb">Логин/Email</string>
    <string name="signin_layout_password_lb">Пароль</string>
    <string name="signin_layout_signin_btn">Войти</string>
    <string name="signin_layout_forgot_password_btn">Забыли пароль?</string>
    <string name="signin_layout_reg_btn">Регистрация</string>

    <string name="registration_layout_lt_lb">Регистрация</string>
    <string name="registration_layout_name_lb">Имя</string>
    <string name="registration_layout_surname_lb">Фамилия</string>
    <string name="registration_layout_login_lb">Логин</string>
    <string name="registration_layout_email_lb">Email</string>
    <string name="registration_layout_password_lb">Пароль</string>
    <string name="registration_layout_confirm_password_lb">Подтверждение пароля</string>
    <string name="registration_layout_reg_btn">Зарегестрироваться</string>

    <string name="forgot_layout_lt_lb">Восстановление пароля</string>
    <string name="forgot_layout_email_lb">Email</string>
    <string name="forgot_layout_restore_password_btn">Восстановить пароль</string>
    <string name="forgot_layout_dialog_result_title_lb">Восстановление пароля</string>
    <string name="forgot_layout_dialog_result_message_lb">На данный адрес электронной почты было отправлено письмо с инструкциями по восстановлению пароля</string>

    <string name="object_layout_commentBtn">Комментарии</string>
    <string name="object_layout_reviewBtn">Отзывы</string>
    <string name="object_layout_photoBtn">Фотографии</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_comment_editor">CommentEditorActivity</string>
</resources>
